--- a/src/main/resources/cz/muni/exceptions/web/pages/ExceptionsPage.html
+++ b/src/main/resources/cz/muni/exceptions/web/pages/ExceptionsPage.html
@@ -54,7 +54,7 @@
                 <li>profit!</li>
             </ol>
             <p>
-                Please mention the correct Wicket version: <wicket:container wicket:id="version">1.5-SNAPSHOT</wicket:container>.
+                Please mention the correct Wicket version: <wicket:container wicket:id="clock">12:34:12</wicket:container>.
             </p>
         </div>
         <div id="ft">
