Fixed getter/setter name in Ticket

--- a/src/main/resources/cz/muni/exceptions/web/pages/ExceptionsPage.html
+++ b/src/main/resources/cz/muni/exceptions/web/pages/ExceptionsPage.html
@@ -17,6 +17,7 @@
             <div wicket:id="tickets">
                 <h2 wicket:id="detailMessage"></h2>
                 <p wicket:id="ticketClass"></p>
+                <p wicket:id="occurrences"></p>
             </div>
         </div>
         <div id="ft">
