Modified css of ExceptionDetailPage

--- a/src/main/resources/cz/muni/exceptions/web/pages/ExceptionDetailPage.html
+++ b/src/main/resources/cz/muni/exceptions/web/pages/ExceptionDetailPage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <wicket:extend>
-    <div class="panel panel-default">
+    <div class="panel panel-primary">
         <div class="panel-heading" wicket:id="detailMessage"></div>
         <div class="panel-body">
             <div>
@@ -24,6 +24,6 @@
         </table>
     </div>
     <div>
-        <a href="#" wicket:id="back">Back</a>
+        <a href="#" wicket:id="back" class="btn btn-warning">Back</a>
     </div>
 </wicket:extend>
