--- a/src/main/resources/cz/muni/exceptions/web/pages/AbstractExceptionsPage.html
+++ b/src/main/resources/cz/muni/exceptions/web/pages/AbstractExceptionsPage.html
@@ -17,24 +17,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Exceptions</a>                    
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="#">Settings</a>
-                        </li>
-                        <li>
-                            <a href="#">Profile</a>
-                        </li>
-                        <li>
-                            <a href="#">Help</a>
-                        </li>
-                    </ul>
-                    <form class="navbar-form navbar-right">
-                        <input type="text" class="form-control" placeholder="Search..."/>
-                    </form>
-                </div>
+                    <a class="navbar-brand" href="#" wicket:id="brandLink">Exceptions</a>                    
+                </div>                
             </div>
         </div>
         <div class="container-fluid">
@@ -42,14 +26,8 @@
                 <div class="col-sm-3 col-md-2 sidebar">
                     <ul class="nav nav-sidebar">
                         <li class="active">
-                            <a href="#">Overview</a>
-                        </li>
-                        <li>
-                            <a href="#">Analytics</a>
-                        </li>
-                        <li>
-                            <a href="#">Export</a> 
-                        </li>
+                            <a href="#" wicket:id="overviewLink">Overview</a>
+                        </li>                        
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
