Fixed css and added class name field to detail page

--- a/src/main/resources/cz/muni/exceptions/web/pages/ExceptionDetailPage.html
+++ b/src/main/resources/cz/muni/exceptions/web/pages/ExceptionDetailPage.html
@@ -4,6 +4,9 @@
         <div class="panel-heading" wicket:id="detailMessage"></div>
         <div class="panel-body">
             <div>
+                Class: <label wicket:id="className"></label>
+            </div>
+            <div>
                 Category: <label wicket:id="ticketClass"></label>
             </div>
             <div>
