--- a/src/main/resources/cz/muni/exceptions/web/pages/ExceptionsPage.html
+++ b/src/main/resources/cz/muni/exceptions/web/pages/ExceptionsPage.html
@@ -9,6 +9,7 @@
                 <tr>
                     <th>#</th>
                     <th>Detail Message</th>
+                    <th>Class Name</th>
                     <th>Category</th>
                     <th>Last Occurrence</th>                    
                 </tr>
@@ -21,6 +22,7 @@
                             <label wicket:id="detailMessage">[Something bad happened]</label>
                         </a>
                     </td>
+                    <td wicket:id="className">[java.util.SecurityException]</td>
                     <td wicket:id="ticketClass">[Database]</td>
                     <td wicket:id="latestOccurrence">[12.12.2012 12:12:12.12]</td>
                 </tr>
