--- a/src/main/resources/cz/muni/exceptions/web/pages/AbstractExceptionsPage.html
+++ b/src/main/resources/cz/muni/exceptions/web/pages/AbstractExceptionsPage.html
@@ -2,7 +2,7 @@
 <html xmlns:wicket="http://wicket.apache.org">
     <head>
         <meta charset="utf-8" />
-        <title>Apache Wicket Quickstart</title>
+        <title>Exceptions</title>
         <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:regular,bold' rel='stylesheet' type='text/css' />
         <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="Stylesheet" />
     </head>
@@ -31,7 +31,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <h1 class="page-header">Dashboard</h1>
+                    <h1 class="page-header">Exceptions</h1>
                     <div wicket:id="notifier"></div>
                     <wicket:child />
                 </div>
